@@ -121,10 +121,20 @@
             <string>REVERB</string>
            </attribute>
            <layout class="QGridLayout" >
-            <item row="0" column="0" colspan="3" >
+            <item row="0" column="0" >
+             <widget class="QPushButton" name="ReverbResetButton" >
+              <property name="text" >
+               <string>Reset</string>
+              </property>
+              <property name="toolTip">
+               <string>Reset Reverb</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="1" colspan="3" >
              <widget class="qxgeditCombo" name="ReverbTypeCombo" />
             </item>
-            <item row="0" column="3" colspan="7" >
+            <item row="0" column="4" colspan="6" >
              <spacer>
               <property name="orientation" >
                <enum>Qt::Horizontal</enum>
@@ -224,10 +234,20 @@
             <string>CHORUS</string>
            </attribute>
            <layout class="QGridLayout" >
-            <item row="0" column="0" colspan="3" >
+            <item row="0" column="0" >
+             <widget class="QPushButton" name="ChorusResetButton" >
+              <property name="text" >
+               <string>Reset</string>
+              </property>
+              <property name="toolTip">
+               <string>Reset Chorus</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="1" colspan="3" >
              <widget class="qxgeditCombo" name="ChorusTypeCombo" />
             </item>
-            <item row="0" column="3" colspan="7" >
+            <item row="0" column="4" colspan="6" >
              <spacer>
               <property name="orientation" >
                <enum>Qt::Horizontal</enum>
@@ -330,10 +350,20 @@
             <string>VARIATION</string>
            </attribute>
            <layout class="QGridLayout" >
-            <item row="0" column="0" colspan="3" >
+            <item row="0" column="0" >
+             <widget class="QPushButton" name="VariationResetButton" >
+              <property name="text" >
+               <string>Reset</string>
+              </property>
+              <property name="toolTip">
+               <string>Reset Variation</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="1" colspan="3" >
              <widget class="qxgeditCombo" name="VariationTypeCombo" />
             </item>
-            <item row="0" column="3" colspan="7" >
+            <item row="0" column="4" colspan="6" >
              <spacer>
               <property name="orientation" >
                <enum>Qt::Horizontal</enum>
